<resources>
    <string name="app_name">Sonic Game</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="_0">0</string>
    <string name="start">Start</string>
    <string name="canc">CANC</string>
    <string name="ez">EZ</string>
    <string name="todo">TODO</string>
    <string name="medium">Medium</string>
    <string name="_18">18+</string>
</resources>