<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    android:backgroundTint="#FFFFFF"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/Sanic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        app:layout_constraintBottom_toTopOf="@+id/Start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/maxresdefault"
        android:contentDescription="@string/todo" />

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:foregroundTint="#2F283E"
        android:foregroundTintMode="screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/ez"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#2A2CB5"
            android:text="@string/ez"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/medium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#2A2CB5"
            android:text="@string/medium"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#2A2CB5"
            android:text="@string/_18"
            tools:ignore="ButtonStyle" />

    </TableRow>

    <Button
        android:id="@+id/Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2A2CB5"
        android:backgroundTintMode="add"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:layout_constraintVertical_bias="0.93" />

</androidx.constraintlayout.widget.ConstraintLayout>